--- a/weshare/index.html
+++ b/weshare/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMNnDdy4qq4m2j9Gjn60FSF0t9/2e5m9LhV2ai3"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
